--- a/funfacts.html
+++ b/funfacts.html
@@ -14,8 +14,10 @@
          <a href = "index.html"><img class = "home" src = "images/home.png">
       </a>
     <header> 
-      <h1>CHICAGO FUNS! </h1>
+      <h1 class = "bigtext">Chicago Fun Facts </h1>
     </header>
+  <div class="font">
+    <div class="container">
   </head>
 
     <h1>First Firsts - Chicago was the home for a lot of inventions! These are just some of them: </h1>
