--- a/history.html
+++ b/history.html
@@ -9,7 +9,7 @@
     <title>CHICAGO</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
          <a href = "index.html"><img class = "home" src = "images/home.png"> </a>
-    <header> <h1>HISTORY</h1>
+    <header> <h1 class = "bigtext">HISTORY</h1>
     </header>
   
     
