--- a/ideas.html
+++ b/ideas.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2     family=League+Spartan&display=swap" rel="stylesheet">
-    <title>CHICAGO</title>
+    <title>Chicago</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
