--- a/landmarks.html
+++ b/landmarks.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -11,7 +11,7 @@
       </a>
     <link href="style.css" rel="stylesheet" type="text/css" />
       <div class="topper">
-      <header> <h1>LANDMARKS</h1> </header>
+      <header> <h1 class = "bigtext">Landmarks</h1> </header>
       </a>
       </div>
 
@@ -57,8 +57,8 @@ It is currently the third-tallest building in the United States and the Western 
 
   <div class="container">
   <div> <h2 class="subhead">   <b> JOHN HANCOCK CENTER </b></ </h2></div>
-     <img src="images/hancock.png" alt="hancockcenter" width="200" height="160"> 
-    <p> The John Hancock Center is a 100-story, 1,128-foot[7] supertall skyscraper located in Chicago, Illinois. It was the second-tallest building in the world after the Empire State Building, the tallest in Chicago, and the tallest outside New York City. It is currently the fifth-tallest building in Chicago and the thirteenth-tallest in the United States.The building is home to several offices and restaurants, as well as about 700 condominiums, and at the time of its completion contained the highest residence in the world. The 44th-floor sky lobby features America's highest indoor swimming pool. </p>
+     <img src="images/hancock.png" alt="hancockcenter" width="200" height="160">  
+    <p> The John Hancock Center is a 100-story, 1,128-foot[7] supertall skyscraper located in Chicago, Illinois. It was the second-tallest building in the world after the Empire State Building, the tallest in Chicago, and the tallest outside New York City. It is currently the fifth-tallest building in Chicago and the thirteenth-tallest in the United States. The building is home to several offices and restaurants, as well as about 700 condominiums, and at the time of its completion contained the highest residence in the world. The 44th-floor sky lobby features America's highest indoor swimming pool. </p>
   </div>
 
 
