--- a/famousfoods.html
+++ b/famousfoods.html
@@ -14,7 +14,7 @@
   <a href = "index.html"><img class = "home" src = "images/home.png">
       </a>
     
-   <header> <h1 class = "bigtext">Iconic Dishes </h1>
+   <header> <h1 class = "bigtext">FAMOUS FOODS </h1>
     </header>
   <div class="font">
     <div class="container">
